--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+
+<app-header [title]="title"></app-header>
+<!--<app-carousel></app-carousel>-->
+<router-outlet></router-outlet>
