--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-header [title]="title"></app-header>
 <!--<app-carousel></app-carousel>-->
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
