--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -3,24 +3,56 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="" alt="First slide">
+      <img class="d-block img-fluid" src="./../../assets/images/20th-century-villa.jpg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
         <h3></h3>
         <p></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="" alt="Second slide">
+      <img class="d-block img-fluid" src="./../../assets/images/comfortable-suburban-house.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
         <h3></h3>
         <p></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="" alt="Third slide">
+      <img class="d-block img-fluid" src="./../../assets/images/house-with-a-pool.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>...</h3>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="./../../assets/images/luxurious-house-with-a-swimming-pool.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>...</h3>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="./../../assets/images/modern-house-with-a-spacious-terrace.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>...</h3>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="./../../assets/images/modern-house-with-the-great-view.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>...</h3>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+    <img class="d-block img-fluid" src="./../../assets/images/summer-house-with-a-pole.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h3>...</h3>
         <p>...</p>
