--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
-<nav class="navbar fixed-bottom nnavbar-inverse bg-inverse">
+<nav class="navbar nnavbar-inverse bg-inverse">
   <a class="navbar-brand" href="#">Fixed bottom</a>
 </nav>
+<!--fixed-bottom-->
