--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -10,3 +10,6 @@
     <sebm-google-map-marker [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>
   </sebm-google-map>
 </div>
+
+
+<!--declare var google: any;-->
