--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,50 @@
-<p>
-  signup works!
-</p>
+<div class="container">
+  <form [formGroup]="createUserForm" (ngSubmit)="onSignUp($event)">
+    <div class="form-group">
+      <label for="exampleInputName">Name</label>
+      <input type="text" formControlName="name" class="form-control" id="exampleInputName" aria-describedby="textHelp" placeholder="Enter Name">
+      <small id="textHelp" class="form-text text-muted">Enter Your complete Name</small>
+    </div>
+      <div class="form-group">
+      <label for="exampleInputTel">Phone Number</label>
+      <input type="tel" formControlName="phoneNo" class="form-control" id="exampleInputTel" aria-describedby="telHelp" placeholder="Enter Phone No">
+      <small id="telHelp" class="form-text text-muted">Enter Your Phone Number</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" formControlName="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword">Password</label>
+      <input type="password" formControlName="password" class="form-control" id="exampleInputPassword" placeholder="Password">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">ReType Password</label>
+      <input type="password" formControlName="password1" class="form-control" id="exampleInputPassword1" placeholder="ReType Password">
+    </div>
+    <!--<div class="form-check">
+      <label class="form-check-label">
+        <input type="checkbox" class="form-check-input">
+        Check me out
+      </label>
+    </div>-->
+    <div class="map">
+      <sebm-google-map 
+        [latitude]="lat" 
+        [longitude]="lng"
+        [zoom]="zoom"
+        [zoomControl]="false"
+      >
+        <sebm-google-map-marker 
+          [latitude]="lat" 
+          [longitude]="lng"
+          >
+        </sebm-google-map-marker>
+      </sebm-google-map>
+    </div>
+    <br>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+<br>
